--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -43,6 +43,7 @@ li {
   margin-top: 2px;
   border-radius: 10px;
   align-items: center;
+  font-weight: 550;
 }
 
 .nav-bar-search {
@@ -75,7 +76,7 @@ li {
   background-color: transparent;
 }
 
-a, p {
+.nav-bar-link, p {
   border-radius: 10px;
   padding: 15px;
   text-decoration: none;
@@ -83,7 +84,7 @@ a, p {
   display: flex;
 }
 
-a:hover, p:hover {
+.nav-bar-link:hover, p:hover {
   background-color: var(--bg-highlight-blue);
   cursor: pointer;
 }
